force-app/main/default/objects/Data_Quality_Rule__c/Data_Quality_Rule__c.object-meta.xml
<CustomObject>
    <description>Admin-configured field completeness rule used by the Account data quality score.</description>
    <label>Data Quality Rule</label>
    <nameField>
        <label>Data Quality Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Quality Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>