force-app/main/default/objects/Data_Quality_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When selected, the rule contributes to the data quality score.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>