force-app/main/default/objects/Data_Quality_Rule__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the field evaluated by this rule, such as Phone or Rating.</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>