force-app/main/default/objects/Data_Quality_Rule__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>Business importance of the field for data cleanup prioritization.</description>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Nice-to-have</fullName>
                <default>true</default>
                <label>Nice-to-have</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>