force-app/main/default/objects/Data_Quality_Rule__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the object evaluated by this rule. The current Account widget reads Account rules.</description>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>