force-app/main/default/objects/Data_Quality_Rule__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Display order for this rule in the score widget.</description>
    <label>Sort Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>