force-app/main/default/objects/Data_Quality_Rule__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Numeric score weight for this field. Critical rules should generally use a higher value.</description>
    <label>Weight</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>