force-app/main/default/objects/Data_Quality_Rule__c/listViews/Active_Rules.listView-meta.xml
<ListView>
    <fullName>Active_Rules</fullName>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Importance__c</columns>
    <columns>Weight__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rules</label>
</ListView>